Layout issues

--- a/reactComponent/src/components/CathoChatBox/CathoChatHistory/cathoChatHistory.scss
+++ b/reactComponent/src/components/CathoChatBox/CathoChatHistory/cathoChatHistory.scss
@@ -33,9 +33,9 @@
   }
 
   .history-message-box{
-    width: $chat-box-desktop-width - ($user-picture-wrapper-width + 40px);
+    width: $chat-box-desktop-width - ($user-picture-wrapper-width + 70px);
     vertical-align: top;
-    padding: 0 10px 10px 10px;
+    padding: 0 10px 10px 20px;
     float: left;
 
     .history-message-box-content {
