--- a/reactComponent/src/components/CathoChatBox/cathoChatBox.scss
+++ b/reactComponent/src/components/CathoChatBox/cathoChatBox.scss
@@ -44,4 +44,23 @@ $fa-font-path: '../fontAwesome';
       }
     }
   }
+
+  .catho-chat-box__message-form-wrapper {
+    border-top: 1px solid $border-color;
+    padding: 10px;
+
+    .message-form {
+      width: 100%;
+
+      .message-input {
+        width: 100%;
+        display: block;
+        border: 2px solid $border-color;
+        box-sizing: border-box;
+        height: 50px;
+        padding: 5px 10px 20px 10px;
+        background: #efefef;
+      }
+    }
+  }
 }
