--- a/reactComponent/src/components/CathoChatBox/variables.scss
+++ b/reactComponent/src/components/CathoChatBox/variables.scss
@@ -1,2 +1,3 @@
 $chat-box-desktop-width: 450px;
 $text-color: #7c7c7c;
+$border-color: #e4e4e4;
